fixes section1 fonts and spacing

--- a/style.css
+++ b/style.css
@@ -100,10 +100,17 @@ header ul {
 /* .section1 div {
   flex: 1;
   /* width: 600px; */
+/* } */
+
+.main-text {
+  margin-top: 0;
+  margin-bottom: 5px;
 }
 
-*/ .main-text {
-  margin-top: 0;
+.main-text ~ p {
+  margin-top: 5px;
+  font-size: 20px;
+  color: #e5e7eb;
 }
 
 .section2 {
@@ -198,4 +205,5 @@ button {
   justify-content: center;
   align-items: center;
   flex: 1.2;
+  font-size: 20px;
 }
